z-index fix

--- a/assets/scss/_address-bar.scss
+++ b/assets/scss/_address-bar.scss
@@ -9,7 +9,7 @@
   height:  auto;
   text-align: center;
   position: relative;
-  z-index: 10;
+  z-index: 1200;
 
   {% if theme.options.address_bar.bg_image %}
     background-image: url('{{ theme.options.address_bar.bg_image }}');
